<resources>
    <string name="app_name">ENPOVE 2021-2022</string>
    <string name="app_name1">II ENPOVE</string>
    <string name="app_version">Versión 0.0.0</string>
    <string name="title_activity_encuesta">EncuestaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="content_logo_inei">logo inei</string>
    <string name="nombre_encuesta">SEGUNDA ENCUESTA DIRIGIDA A LA POBLACION VENEZOLANA QUE RESIDE EN EL PAÍS 2021-2022</string>
    <string name="login_texto_usuario">USUARIO</string>
    <string name="login_texto_password">CONTRASEÑA</string>
    <string name="login_texto_boton">INGRESAR</string>
    <string name="nombre_modulo_caratula">Carátula</string>
    <string name="nombre_modulo_entrevista_supervision">Entrevistas y Supervisión</string>
    <string name="nombre_modulo_funcionarios_encuesta">Funcionarios de la Encuesta</string>
    <string name="texto_especifique">Especifique</string>
    <string name="marco_mes">MES</string>
    <string name="marco_anio">ANIO</string>
    <string name="marco_periodo">PERIODO</string>
    <string name="marco_conglomerado">CONGLOMERADO</string>
    <string name="datos_generales_menu">Capítulo Inicial: Datos Generales</string>
    <string name="datos_generales_submenu_1">Carátula</string>
    <string name="datos_generales_submenu_2">Hogares</string>
    <string name="datos_generales_submenu_3">Control de Visitas Encuestador</string>
    <string name="datos_generales_submenu_4">Control de Visitas Supervisor</string>
    <string name="datos_generales_submenu_5">Funcionarios</string>
    <string name="caratula_conglomerado">CONGLOMERADO</string>
    <string name="caratula_tipo_seleccion">TIPO DE SELECCIÓN </string>
    <string name="caratula_numero_seleccion_vivienda">N° SELECCIÓN</string>
    <string name="caratula_vivienda_remplazo">VIVIENDA DE REMPLAZO</string>
    <string name="caratula_vivienda_por_remplazar">Anote el Nº de Selección de la vivienda que reemplaza</string>
    <string-array name="caratula_array_seleccion">
        <item>Seleccione</item>
        <item>1.Vivienda 1</item>
        <item>2.Vivienda 2</item>
        <item>3.Vivienda 3</item>
        <item>4.Vivienda 4</item>
        <item>5.Vivienda 5</item>
        <item>6.Vivienda 6</item>
    </string-array>
    <string name="caratula_ubicacion_geografica">UBICACIÓN GEOGRÁFICA</string>
    <string name="caratula_departamento">1.DEPARTAMENTO</string>
    <string name="caratula_provincia">2.PROVINCIA</string>
    <string name="caratula_distrito">3.DISTRITO</string>
    <string name="caratula_centro_poblado">4.CENTRO POBLADO</string>
    <string name="caratula_ubicacion_muestral">UBICACIÓN MUESTRAL</string>
    <string name="caratula_zona">5.ZONA N°</string>
    <string name="caratula_n_manzana">6.MANZANA N°</string>
    <string name="caratula_aer">7.AER N°</string>
    <string name="caratula_n_vivienda">7.VIVIENDA N°</string>
    <string name="caratula_direccion">8.DIRECCIÓN DE LA VIVIENDA <i>(Para tipo de vía seleccione sólo un código)</i></string>
    <string-array name="caratula_array_tipo_via">
        <item>Seleccione</item>
        <item>1.Avenida</item>
        <item>2.Jirón</item>
        <item>3.Calle</item>
        <item>4.Pasaje</item>
        <item>5.Carretera</item>
        <item>6.Prolongación</item>
        <item>7.Otro</item>
    </string-array>
    <string name="caratula_tipo_via">TIPO DE VÍA</string>
    <string name="caratula_nombre_via">NOMBRE DE VÍA</string>
    <string name="caratula_n_puerta">N° PUERTA</string>
    <string name="caratula_block">BLOCK</string>
    <string name="caratula_interior">INTERIOR</string>
    <string name="caratula_npta2">N° PUERTA – LETRA</string>
    <string name="caratula_piso">PISO</string>
    <string name="caratula_manzana">MANZANA</string>
    <string name="caratula_lote">LOTE</string>
    <string name="caratula_km">KM</string>
    <string name="caratula_n_telefono">N° de TELÉFONO</string>
    <string name="caratula_total_hogares">9.TOTAL DE HOGARES QUE OCUPAN LA VIVIENDA</string>
    <string name="caratula_n_hogares">¿CUÁNTOS HOGARES OCUPAN ESTA VIVIENDA?</string>
    <string name="caratula_n_hogares_ind">Sr./a: Si HOGAR es la persona o grupo de personas que se alimentan de una misma olla y atienden en común otras necesidades básicas.</string>
    <string name="caratula_viven_venezolanos">15.EN ESTE HOGAR, ¿VIVE ALGUNA PERSONA QUE LLEGÓ DE VENEZUELA?</string>
    <string name="visita_titulo">12.ENTREVISTA Y SUPERVISIÓN</string>
    <string name="visita_visitas_hogar_encuestador">VISITAS AL HOGAR (ENCUESTADOR/A)</string>
    <string name="visita_visitas_hogar_supervisor">VISITAS AL HOGAR (SUPERVISOR/A)</string>
    <string name="visita_numero">N°</string>
    <string name="visita_encuestador">ENCUESTADOR/A</string>
    <string name="visita_supervisor">SUPERVISOR/A LOCAL</string>
    <string name="visita_fecha">FECHA</string>
    <string name="modulo_4_p403">403.¿QUÉ ENFERMEDAD O MALESTAR CRÓNICO PADECE?</string>
    <string name="modulo_4_p403_ind">(Espere la respuesta y seleccione uno o más códigos)</string>
    <string name="modulo_4_p403_sp1">1.Artritis</string>
    <string name="modulo_4_p403_sp2">2.Hipertensión</string>
    <string name="modulo_4_p403_sp3">3.Asma</string>
    <string name="modulo_4_p403_sp4">4.Reumatismo</string>
    <string name="modulo_4_p403_sp5">5.Diabetes</string>
    <string name="modulo_4_p403_sp6">6.Tuberculosis</string>
    <string name="modulo_4_p403_sp7">7.Colesterol</string>
    <string name="modulo_4_p403_sp8">8.Enfermedad pulmonar</string>
    <string name="modulo_4_p403_sp9">9.Cáncer</string>
    <string name="modulo_4_p403_sp10">10.Alteraciones de salud mental</string>
    <string name="modulo_4_p403_sp11">11.Enfermedad del corazón</string>
    <string name="modulo_4_p403_sp12">12.VIH/ SIDA</string>
    <string name="modulo_4_p403_sp13">13.Otras infecciones de transmisión sexual</string>
    <string name="modulo_4_p403_sp14">14.Otro</string>
    <string name="modulo_4_p407">407.¿CUÁLES SON LAS RAZONES POR LAS QUE NO ACUDIÓ A UN CENTRO O ESTABLECIMIENTO DE SALUD?</string>
    <string name="modulo_4_p407_ind">(Espere la respuesta y seleccione uno o más códigos)</string>
    <string name="modulo_4_p407_sp1">1.No tuvo dinero</string>
    <string name="modulo_4_p407_sp2">2.Se encuentra lejos</string>
    <string name="modulo_4_p407_sp3">3.Demora mucho en atender</string>
    <string name="modulo_4_p407_sp4">4.No confía en los médicos</string>
    <string name="modulo_4_p407_sp5">5.No era tan grave / No fue necesario</string>
    <string name="modulo_4_p407_sp6">6.No tiene seguro</string>
    <string name="modulo_4_p407_sp7">7.Se automedicó, repitió receta anterior</string>
    <string name="modulo_4_p407_sp8">8.Falta de tiempo</string>
    <string name="modulo_4_p407_sp9">9.Por maltrato de personal de salud</string>
    <string name="modulo_4_p407_sp10">10.Por falta de documentos</string>
    <string name="modulo_4_p407_sp11">11.Temor por su situación migratoria</string>
    <string name="modulo_4_p407_sp12">12.No confía en las prácticas de salud y parto</string>
    <string name="modulo_4_p407_sp13">13.Otro</string>
    <string name="modulo_8_p804">804.USTED SABE, ¿A QUIÉN O A DÓNDE RECURRIÓ?</string>
    <string name="modulo_8_p804_ind">(Entregue la Tarjeta Nº 4, espere la respuesta y seleccione uno o más códigos)</string>
    <string name="modulo_8_p804_sp1">1.Esposo/a o compañero/a</string>
    <string name="modulo_8_p804_sp2">2.Padre o Madre</string>
    <string name="modulo_8_p804_sp3">3.Familiar</string>
    <string name="modulo_8_p804_sp4">4.Amigo/a o vecino/a</string>
    <string name="modulo_8_p804_sp5">5.Iglesia</string>
    <string name="modulo_8_p804_sp6">6.Comisaría</string>
    <string name="modulo_8_p804_sp7">7.Juzgado/Fiscalía</string>
    <string name="modulo_8_p804_sp8">8.Establecimiento de salud</string>
    <string name="modulo_8_p804_sp9">9.DEMUNA</string>
    <string name="modulo_8_p804_sp10">10.Centro de Emergencia Mujer – CEM/MIMP</string>
    <string name="modulo_8_p804_sp11">11.Defensoría del pueblo</string>
    <string name="modulo_8_p804_sp12">12.Organización privada</string>
    <string name="modulo_8_p804_sp13">13.ONG</string>
    <string name="modulo_8_p804_sp14">14.Otro</string>
    <string name="modulo_8_p810">810.USTED, ¿SABE O CONOCE QUIÉN FUE LA PERSONA QUE MALTRATÓ FÍSICAMENTE A LA VÍCTIMA?</string>
    <string name="modulo_8_p810_ind">(Entregue la tarjeta, espere la respuesta y seleccione uno o más códigos)</string>
    <string name="modulo_8_p810_sp1">1.Esposo/a o compañero/a</string>
    <string name="modulo_8_p810_sp2">2.Padre</string>
    <string name="modulo_8_p810_sp3">3.Madre</string>
    <string name="modulo_8_p810_sp4">4.Otro familiar femenino</string>
    <string name="modulo_8_p810_sp5">5.Otro familiar masculino</string>
    <string name="modulo_8_p810_sp6">6.Empleador/a </string>
    <string name="modulo_8_p810_sp7">7.Profesor/a </string>
    <string name="modulo_8_p810_sp8">8.Empleado/a público</string>
    <string name="modulo_8_p810_sp9">9.Fuerzas del orden</string>
    <string name="modulo_8_p810_sp10">10.Empleado/a privado</string>
    <string name="modulo_8_p810_sp11">11.Extraño/a </string>
    <string name="modulo_8_p810_sp12">12.Compañero/a de estudio</string>
    <string name="modulo_8_p810_sp13">13.Otro</string>
    <string name="modulo_8_p813">813.USTED TIENE CONOCIMIENTO, ¿A QUIÉN O A DÓNDE RECURRIÓ?</string>
    <string name="modulo_8_p813_ind">(Entregue la tarjeta, espere la respuesta y seleccione uno o más códigos)</string>
    <string name="modulo_8_p813_sp1">1.Esposo/a o compañero/a</string>
    <string name="modulo_8_p813_sp2">2.Padre o madre</string>
    <string name="modulo_8_p813_sp3">3.Familiar</string>
    <string name="modulo_8_p813_sp4">4.Amigo/a o vecino/a</string>
    <string name="modulo_8_p813_sp5">5.Iglesia</string>
    <string name="modulo_8_p813_sp6">6.Comisaria</string>
    <string name="modulo_8_p813_sp7">7.Juzgado/Fiscalía</string>
    <string name="modulo_8_p813_sp8">8.Establecimiento de salud</string>
    <string name="modulo_8_p813_sp9">9.DEMUNA</string>
    <string name="modulo_8_p813_sp10">10.Centro de Emergencia Mujer – CEM/MIMP</string>
    <string name="modulo_8_p813_sp11">11.Defensoría del Pueblo</string>
    <string name="modulo_8_p813_sp12">12.Organización privada</string>
    <string name="modulo_8_p813_sp13">13.ONG</string>
    <string name="modulo_8_p813_sp14">14.Otro</string>
    <string name="modulo_8_p819">819.USTED SABE, ¿A QUIÉN O A DÓNDE RECURRIÓ?</string>
    <string name="modulo_8_p819_ind">(Entregue la tarjeta, espere la respuesta y seleccione uno o más códigos)</string>
    <string name="modulo_8_p819_sp1">1.Esposo/a o compañero/a</string>
    <string name="modulo_8_p819_sp2">2.Padre o madre</string>
    <string name="modulo_8_p819_sp3">3.Familiar</string>
    <string name="modulo_8_p819_sp4">4.Amigo/a o vecino/a</string>
    <string name="modulo_8_p819_sp5">5.Iglesia</string>
    <string name="modulo_8_p819_sp6">6.Comisaria</string>
    <string name="modulo_8_p819_sp7">7.Juzgado/Fiscalía</string>
    <string name="modulo_8_p819_sp8">8.Establecimiento de salud</string>
    <string name="modulo_8_p819_sp9">9.DEMUNA</string>
    <string name="modulo_8_p819_sp10">10.Centro de Emergencia Mujer – CEM/MIMP</string>
    <string name="modulo_8_p819_sp11">11.Defensoría del Pueblo</string>
    <string name="modulo_8_p819_sp12">12.Organización privada</string>
    <string name="modulo_8_p819_sp13">13.ONG</string>
    <string name="modulo_8_p819_sp14">14.Otro</string>
</resources>