<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_layout_pregunta"
    android:padding="@dimen/padding_layout_pregunta"
    android:background="@drawable/marco_pregunta">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TemaTextoPregunta"
        android:text="@string/modulo_4_p407"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_ind"/>
    <CheckBox
        android:id="@+id/mod4_407_checkbox_C4_P407_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp1"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp2"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp3"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp4"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp5"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp6"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp7"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp8"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp9"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp10"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp11"/>
    <CheckBox
        android:id="@+id/mod4_407_C4_P407_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p407_sp12"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/mod4_407_C4_P407_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_small"
            android:text="@string/modulo_4_p407_sp13"/>
        <EditText
            android:id="@+id/mod4_407_edittext_C4_P407_O"
            style="@style/TemaInputEspecifique"/>
    </LinearLayout>
</LinearLayout>