<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_layout_pregunta"
    android:padding="@dimen/padding_layout_pregunta"
    android:background="@drawable/marco_pregunta">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TemaTextoPregunta"
        android:text="@string/modulo_4_p403"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_ind"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp1"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp2"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp3"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp4"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp5"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp6"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp7"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp8"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp9"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp10"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp11"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp12"/>
    <CheckBox
        android:id="@+id/mod4_403_checkbox_C4_P403_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp13"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/mod4_403_checkbox_C4_P403_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_small"
            android:text="@string/modulo_4_p403_sp14"/>
        <EditText
            android:id="@+id/mod4_403_edittext_C4_P403_O"
            style="@style/TemaInputEspecifique"/>
    </LinearLayout>
</LinearLayout>