<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_layout_pregunta"
    android:padding="@dimen/padding_layout_pregunta"
    android:background="@drawable/marco_pregunta">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TemaTextoPregunta"
        android:text="@string/modulo_8_p813"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_ind"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp1"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp2"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp3"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp4"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp5"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp6"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp7"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp8"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp9"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp10"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp11"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp12"/>
    <CheckBox
        android:id="@+id/mod8_813_checkbox_C8_P813_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p813_sp13"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/mod8_813_checkbox_C8_P813_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_small"
            android:text="@string/modulo_8_p813_sp14"/>
        <EditText
            android:id="@+id/mod8_813_edittext_C8_P813_O"
            style="@style/TemaInputEspecifique"/>
    </LinearLayout>
</LinearLayout>