<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_layout_pregunta"
    android:padding="@dimen/padding_layout_pregunta"
    android:background="@drawable/marco_pregunta">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TemaTextoPregunta"
        android:text="@string/modulo_8_p819"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_ind"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp1"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp2"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp3"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp4"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp5"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp6"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp7"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp8"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp9"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp10"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp11"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp12"/>
    <CheckBox
        android:id="@+id/mod8_819_checkbox_C8_P819_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p819_sp13"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/mod8_819_checkbox_C8_P819_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_small"
            android:text="@string/modulo_8_p819_sp14"/>
        <EditText
            android:id="@+id/mod8_819_edittext_C8_P819_O"
            style="@style/TemaInputEspecifique"/>
    </LinearLayout>
</LinearLayout>