<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_layout_pregunta"
    android:padding="@dimen/padding_layout_pregunta"
    android:background="@drawable/marco_pregunta">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TemaTextoPregunta"
        android:text="@string/modulo_8_p804"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_ind"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp1"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp2"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp3"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp4"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp5"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp6"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp7"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp8"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp9"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp10"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp11"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp12"/>
    <CheckBox
        android:id="@+id/mod8_804_checkbox_C8_P804_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p804_sp13"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/mod8_804_checkbox_C8_P804_14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margen_small"
            android:text="@string/modulo_8_p804_sp14"/>
        <EditText
            android:id="@+id/mod8_804_edittext_C8_P804_O"
            style="@style/TemaInputEspecifique"/>
    </LinearLayout>
</LinearLayout>