<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_layout_pregunta"
    android:padding="@dimen/padding_layout_pregunta"
    android:background="@drawable/marco_pregunta">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TemaTextoPregunta"
        android:text="@string/modulo_8_p810"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_ind"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp1"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp2"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp3"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp4"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp5"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp6"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp7"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp8"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp9"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp10"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp11"/>
    <CheckBox
        android:id="@+id/mod8_810_checkbox_C8_P810_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_8_p810_sp12"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/mod8_810_checkbox_C8_P810_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_small"
            android:text="@string/modulo_8_p810_sp13"/>
        <EditText
            android:id="@+id/mod8_810_edittext_C8_P810_O"
            style="@style/TemaInputEspecifique"/>
    </LinearLayout>
</LinearLayout>